Fix headshot overflow, mark Korean paper under review, drop Other links
Replace fixed 5cm box for headshot with auto-sizing div + 200px image
constraint so portrait photo doesn't overflow into bio text. Mark Korean
paper as Under review in CV and site. Remove Other links section.

--- a/style.css
+++ b/style.css
@@ -25,16 +25,14 @@ h4 { font-size: 105%; }
 h5 { font-size: 100%; }
 
 .headshotDiv {
-    width: 5cm;
-    height: 5cm;
     float: right;
-    padding-left: 1em;
+    margin: 0 0 1em 1.5em;
 }
 
 .headshot {
-    width: 90%;
+    width: 200px;
     height: auto;
-    float: right;
+    border-radius: 4px;
 }
 
 .publications {
